--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.5",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.0",
     "meteor-node-stubs": "^1.2.7",
     "postcss": "^8.3.1",
