--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.0",
     "meteor-node-stubs": "^1.2.7",
-    "postcss": "^8.3.1",
-    "postcss-load-config": "^3.1.0",
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simpl-schema": "^3.4.6",
     "tailwindcss": "^2.2.19"
   },
   "meteor": {
