--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-load-config": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "simpl-schema": "^1.12.3",
     "tailwindcss": "^2.2.19"
   },
