--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@babel/runtime": "^7.23.5",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "autoprefixer": "^10.4.0",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "meteor-node-stubs": "^1.2.7",
     "postcss": "^8.4.38",
     "postcss-load-config": "^3.1.4",
