--- a/jsconfig.json
+++ b/jsconfig.json
@@ -116,6 +116,14 @@
       ],
       "meteor/quave:alert-react-tailwind": [
         "/home/robert/.meteor/packages/quave_alert-react-tailwind/3.1.0/web.browser/alert-react-tailwind.js"
+      ],
+      "meteor/alanning:roles": [
+        "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/roles_common.js",
+        "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/roles_common_async.js",
+        "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/client/debug.js",
+        "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/client/uiHelpers.js",
+        "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/client/subscriptions.js",
+        "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/roles_server.js"
       ]
     }
   },
