--- a/jsconfig.json
+++ b/jsconfig.json
@@ -124,6 +124,9 @@
         "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/client/uiHelpers.js",
         "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/client/subscriptions.js",
         "/home/robert/.meteor/packages/alanning_roles/3.6.2/web.browser/roles/roles_server.js"
+      ],
+      "meteor/quave:accounts-passwordless-react": [
+        "/home/robert/.meteor/packages/quave_accounts-passwordless-react/2.1.0/web.browser/Passwordless.js"
       ]
     }
   },
